<resources>
    <!--   ETC    -->
    <string name="app_name">ETZ Cocktails</string>
    <string name="random_txt">Surprise Me!</string>
    <string name="search_txt">Search</string>
    <string name="search_cocktails">Search Cocktails</string>
    <string name="search_ingredient">Search By Ingredient</string>
    <string name="my_favorite_cocktails">Favorites</string>
    <string name="my_cocktails">My Cocktails</string>
    <string name="my_ingredients">My Ingredients</string>
    <string name="number_ingredients"># Ingredients:</string>
    <string name="cocktail">Cocktail</string>
    <string name="instructions">Instructions</string>
    <string name="glass">Glass</string>
    <string name="serve">Serve</string>
    <string name="bye_message">Press back twice to exit!</string>
    <string name="no_connection_message">No internet connection!</string>
    <string name="no_cocktails_message">No Cocktails Found!</string>
    <string name="api_fail_message">Something went wrong on our server!</string>
    <string name="edit_message">Editing: </string>
    <string name="cancel_message">Cancel</string>
    <string name="canceled_message">Canceled</string>
    <string name="save_message">Save</string>
    <string name="added_message">Added</string>
    <string name="edited_message">Cocktail Updated!</string>
    <string name="added_favs_message">Cocktail Added to Favorites!</string>
    <string name="removed_favs_message">Cocktail removed from Favorites!</string>
    <string name="added_my_cocktails_message">Cocktail Added to My Cocktails!</string>
    <string name="removed_my_cocktails_message">Cocktail Removed from My Cocktails!</string>
    <string name="removed_all_my_cocktails_message">Removed ALL My Cocktails!</string>
    <string name="value_missing_message">Please enter value!</string>
    <string name="cocktail_missing_message">First make at least one Cocktail!</string>
    <string name="deleted_message">Cocktail Deleted! Press the bar to view or undo the changes!</string>
    <string name="no_name_add_cocktail">"Can't upload an cocktail without a name!"</string>
    <!--   Add A Cocktail    -->
    <string name="add_name">Enter Cocktail Name</string>
    <string name="add_instructions">Enter Cocktail\'s Instructions</string>
    <string name="add_ing">Enter Ingredient Name</string>
    <string name="add_ing1">Enter Ingredient #1 Name</string>
    <string name="add_ing2">Enter Ingredient #2 Name</string>
    <string name="add_ing3">Enter Ingredient #3 Name</string>
    <string name="add_ing4">Enter Ingredient #4 Name</string>
    <string name="add_ing5">Enter Ingredient #5 Name</string>
    <string name="add_ing6">Enter Ingredient #6 Name</string>
    <string name="add_ing7">Enter Ingredient #7 Name</string>
    <string name="add_ing8">Enter Ingredient #8 Name</string>
    <string name="add_ing9">Enter Ingredient #9 Name</string>
    <string name="add_ing10">Enter Ingredient #10 Name</string>
    <string name="add_measure">Enter Ingredient Measure</string>
    <string name="add_measure1">Enter Ingredient #1 Measure</string>
    <string name="add_measure2">Enter Ingredient #2 Measure</string>
    <string name="add_measure3">Enter Ingredient #3 Measure</string>
    <string name="add_measure4">Enter Ingredient #4 Measure</string>
    <string name="add_measure5">Enter Ingredient #5 Measure</string>
    <string name="add_measure6">Enter Ingredient #6 Measure</string>
    <string name="add_measure7">Enter Ingredient #7 Measure</string>
    <string name="add_measure8">Enter Ingredient #8 Measure</string>
    <string name="add_measure9">Enter Ingredient #9 Measure</string>
    <string name="add_measure10">Enter Ingredient #10 Measure</string>
    <string name="add_photo">Enter Cocktail Photo</string>
    <string name="add_save">Save</string>
    <!--   Ingredients    -->
    <string name="ing_whiskey">Whiskey</string>
    <string name="ing_rum">Rum</string>
    <string name="ing_gin">Gin</string>
    <string name="ing_tequila">Tequila</string>
    <string name="ing_vodka">Vodka</string>
    <string name="ing_lemon">Lemon</string>
    <!--   Glasses    -->
    <string name="glass_lowBall">Lowball Glass</string>
    <string name="glass_oldFashioned">Old-fashioned Glass</string>
    <string name="glass_whiskey">Whiskey Glass</string>
    <string name="glass_highBall">Highball Glass</string>
    <string name="glass_CocktailGlass">Cocktail Glass</string>
    <string name="glass_jar">Jar</string>
    <string name="glass_hurricane">Hurricane Glass</string>
    <string name="glass_collins">Collins Glass</string>
    <string name="glass_shot">Shot Glass</string>
    <string name="glass_martini">Martini Glass</string>
    <!--   Tags    -->
    <!-- IBA = international bar association   -->
    <string name="tag_iba">IBA</string>
    <string name="tag_alcoholic">Alcoholic</string>
    <string name="tag_nonAlcoholic">Non alcoholic</string>
    <string name="tag_optionalAlcoholic">Optional alcohol</string>
    <string name="tag_classic">Classic</string>
    <string name="tag_classy">Classy</string>
    <string name="tag_beach">Beach</string>
    <string name="tag_dinnerParty">Dinner Party</string>
    <string name="tag_colorful">Colorful</string>
    <string name="tag_summer">Summer</string>
    <string name="tag_winter">Winter</string>
    <string name="tag_fresh">Fresh</string>
    <string name="tag_dairy">Dairy</string>
    <string name="tag_dark">Dark</string>
    <string name="tag_nutty">Nutty</string>
    <string name="tag_nature">Nature</string>
    <string name="tag_frozen">Frozen</string>
    <string name="tag_cold">Cold</string>
    <string name="tag_hot">Hot</string>
    <string name="tag_fruity">Fruity</string>
    <string name="tag_sweet">Sweet</string>
    <string name="tag_spicy">Spicy</string>
    <string name="tag_sour">Sour</string>
    <string name="tag_savory">Savory</string>
    <string name="tag_breakfast">Breakfast</string>
    <string name="tag_brunch">Brunch</string>
    <string name="tag_hangover">Hangover</string>
    <string name="tag_strong">Strong</string>
    <!--   Units    -->
    <string name="unit_ml">ml</string>
    <string name="unit_cl">cl</string>
    <string name="unit_oz">oz</string>
    <string name="unit_dash">Dash</string>
    <string name="unit_drop">Drops</string>
    <string name="unit_tsp">Table Spoon</string>
    <string name="add_cocktail">Add Cocktail</string>
    <string name="remove_all">Remove All</string>
    <string name="remove">remove</string>
    <string name="no_cocktails_added">No Cocktails added</string>
    <string name="heres_afew_random_cocktails">Here are a few random cocktails to look at:</string>

</resources>