<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="15dp"
    >

    <TextView
        android:id="@+id/NameOfCocktail"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:gravity="center"
        android:text="@string/add_name"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/PhotoOfCocktail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_monochrome" />

    <TextView
        android:id="@+id/NumberOfIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginEnd="16dp"
        android:text="@string/my_ingredients"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/CocktailInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="14sp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="8dp"/>

</androidx.cardview.widget.CardView>