<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchCocktails"
    android:paddingBottom="30dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CocktailToSearchInputText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:minWidth="200dp"
        android:minHeight="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/CocktailToSearchInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_cocktails"
            android:minHeight="48dp"
            android:queryHint="Enter Cocktail to search"
            android:singleLine="true"
            android:textColorHint="#757575"
            android:imeOptions="actionDone"
            android:maxLength="32"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search_txt"
        android:textAlignment="center"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/CocktailToSearchInputText" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/randomButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/random_txt"
        android:textAlignment="center"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:scrollbarSize="3dp"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:id="@+id/CocktailViewList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CocktailToSearchInputText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>